# patterns-in-ools

./: .gitignore  LICENSE  README.md  run.sh
.github/workflows/: main.yaml
python/: .gitignore  README.md  pyproject.toml  pytest.ini  setup.py  tox.ini
python/patterns/: __init__.py  singleton.py
python/patterns/singleton/: __init__.py  logger.py  singleton.ipynb  singleton.py
python/patterns/template/: pattern_name.ipynb
python/pypatterns/: __init__.py
python/pypatterns/creational/: prototype.ipynb  prototype.py  singleton.ipynb  singleton.py
python/pypatterns/examples/: logger.py  rts.py
python/pypatterns/examples/creational/: logging.py  rts.py
python/pypatterns/prototype/: prototype.ipynb  prototype.py
python/pypatterns/singleton/: singleton.ipynb
python/pypatterns/template/: pattern_name.ipynb
python/tests/func/: test_logger.py  test_prototype_exceptions.py  test_rts.py  test_singleton_exceptions.py
python/tests/unit/: test_patterns.py  test_prototype.py  test_pypatterns.py  test_singleton.py
ruby/: README.md
