[tool.poetry]
name = "patterns"
version = "0.1.1"
description = "Practical Design Patterns in Python"
authors = ["SentinelWarren <warrenkalolo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
